--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -25,7 +25,8 @@ h6 {
 
 body {
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: "HYZhengYuan", sans-serif;
+    /* font-family: "HYZhengYuan", sans-serif; */
+    font-family: "NotoSansSC", sans-serif;
     font-size: 16px;
     /* line-height: 1.6; */
     line-height: 1.6875;
