--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -75,32 +75,16 @@ pre .copy-code.clicked {
 
 @font-face {
     font-family: 'HYZhengYuan';
-    src: url('../fonts/HYZhengYuan-55W.woff2') format('woff2'),
-        url('../fonts/HYZhengYuan-55W.ttf') format('truetype');
+    src: url('/fonts/HYZhengYuan-55W.woff2') format('woff2'),
+        url('/fonts/HYZhengYuan-55W.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'HYZhengYuan';
-    src: url('../fonts/HYZhengYuan-75W.woff2') format('woff2'),
-        url('../fonts/HYZhengYuan-75W.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NotoSansSC';
-    src: url('../fonts/NotoSansSC-Regular.woff2') format('woff2'),
-        url('../fonts/NotoSansSC-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NotoSansSC';
-    src: url('../fonts/NotoSansSC-Bold.woff2') format('woff2'),
-        url('../fonts/NotoSansSC-Bold.ttf') format('truetype');
+    src: url('/fonts/HYZhengYuan-75W.woff2') format('woff2'),
+        url('/fonts/HYZhengYuan-75W.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
