Remove dot char in the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,12 +6,12 @@
             {{- else }}
                 <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a> All rights reserved.</span>
             {{- end }}
-            {{- print " · " }}
+            {{- print " " }}
         {{- end }}
 
         {{- with site.Params.footer.text }}
             {{ . | markdownify }}
-            {{- print " · " }}
+            {{- print " " }}
         {{- end }}
 
 
