--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -88,3 +88,36 @@ pre .copy-code.clicked {
     font-weight: 700;
     font-style: normal;
 }
+
+/* 尝试将字体托管在服务器, 但是回过头一想从 Google 下载和从 GitHub 下载实际上没什么区别 */
+/* @font-face {
+    font-family: 'Source Code Pro';
+    src: url('/fonts/SourceCodePro-Regular.woff2') format('woff2'),
+        url('/fonts/SourceCodePro-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    src: url('/fonts/SourceCodePro-Bold.woff2') format('woff2'),
+        url('/fonts/SourceCodePro-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    src: url('/fonts/SourceCodePro-Italic.woff2') format('woff2'),
+        url('/fonts/SourceCodePro-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    src: url('/fonts/SourceCodePro-BoldItalic.woff2') format('woff2'),
+        url('/fonts/SourceCodePro-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+} */
