--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,12 +1,13 @@
 {{- /* Head custom content area start */ -}}
 {{- /* Insert any custom code (web-analytics, resources, etc.) - it will appear in the
 
-<head></head> section of every page. */ -}}
+    <head></head> section of every page. */
+-}}
 {{- /* Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{ if or .Params.math .Site.Params.math }}
-{{ partial "math.html" . }}
+    {{ partial "math.html" . }}
 {{ end }}
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
 {{- /* Head custom content area end */ -}}
