--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -155,7 +155,8 @@
                             {{- .Pre }}
                             {{- .Name -}}
                             {{ .Post -}} </span
-                        >{{- if (findRE "://" .URL) }}
+                        >{{- if (findRE "://" .URL) -}}
+                            &nbsp;
                             <svg
                                 fill="none"
                                 shape-rendering="geometricPrecision"
