Restore `empheq` extension for `\numcases` command in MathJax

--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -8,10 +8,7 @@
 <script>
     window.MathJax = {
         loader: {
-            load: [
-                // "[tex]/empheq",
-                "[tex]/cases",
-            ],
+            load: ["[tex]/empheq", "[tex]/cases"],
         },
         tex: {
             inlineMath: [
@@ -24,10 +21,7 @@
             ],
             tags: "ams",
             packages: {
-                "[+]": [
-                    // "empheq",
-                    "cases",
-                ],
+                "[+]": ["empheq", "cases"],
             },
         },
     };
