--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -195,6 +195,7 @@
     font-family: "SauceCodePro NFM", "HYZhengYuan", monospace;
     /* margin: auto 4px; */
     margin: 0;
+    /* padding: 4px 6px; */
     padding: 0;
     /* font-size: 0.78em; */
     font-size: 14.7px;
