--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -131,6 +131,7 @@
 
 .post-content table {
     margin-bottom: var(--content-gap);
+    /* border: 1px solid var(--border); */
 }
 
 .post-content table th,
@@ -139,6 +140,31 @@
     padding: 8px 5px;
     line-height: 1.5;
     border-bottom: 1px solid var(--border);
+    /* border: 1px solid var(--border); */
+    /* width: 100%; */
+    width: 1%;
+    word-wrap: break-word;
+}
+
+/* 表头行 */
+.post-content table thead th {
+    border-left: 1px solid var(--border);
+    border-right: 1px solid var(--border);
+    background-color: var(--table-head-background-color);
+    color: var(--table-head-color);
+}
+
+/* 表身第 1, 3, ... 行 (深色) */
+.post-content table tbody tr:nth-child(odd) td {
+    border-left: 1px solid var(--border);
+    border-right: 1px solid var(--border);
+    background-color: var(--table-body-background-color-odd);
+}
+
+/* 表身第 2, 4, ... 行 (浅色) */
+.post-content table tbody tr:nth-child(even) td {
+    border-left: 1px solid var(--border);
+    border-right: 1px solid var(--border);
 }
 
 .post-content table th {
@@ -203,7 +229,7 @@
     /* 正文的 line-height 已设置为 1.6875 */
     /* background: var(--code-bg); */
     /* border-radius: 2px; */
-    color: #636363;
+    color: var(--code-color);
 }
 
 /* 仅针对代码块 */
