--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -82,10 +82,10 @@ ul {
 }
 
 table {
-    /* width: 100%; */
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    /* width: fit-content; */
+    /* margin-left: auto;
+    margin-right: auto; */
     border-collapse: collapse;
     border-spacing: 0;
     overflow-x: auto;
