--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -150,7 +150,10 @@
                     <a
                         href="{{ .URL | absLangURL }}"
                         title="{{ .Title | default .Name }} {{- cond $is_search (" (Alt + /)" | safeHTMLAttr) ("" | safeHTMLAttr ) }}"
-                        target="_blank"
+                        {{- if (findRE "://" .URL) -}}
+                            target="_blank"
+                        {{- else }}
+                        {{- end }}
                         {{- cond $is_search (" accesskey=/" | safeHTMLAttr) ("" | safeHTMLAttr ) }}
                         ><span {{- if eq $menu_item_url $page_url }}class="active"{{- end }}>
                             {{- .Pre }}
