Change copyright format
Changed the format of the copyright footer to the following form:

```text
Copyright © 20xx-20yy site-title All Rights Reserved
```

The way is to add custom config under the `params:` section:

```yaml
params:
  copyrightStartYear: 2024
```

since directly adding config in the top level config won't be recognized
by hugo and will raise error. And then add the corresponding logic in
the `footer.html` partial file:

```go
<span
    >Copyright&nbsp;&copy;&nbsp;
    {{- if and site.Params.CopyrightStartYear (not (eq \
    site.Params.CopyrightStartYear now.Year)) -}}
        {{ site.Params.CopyrightStartYear }}-
    {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">\
    {{ site.Title }}</a>&nbsp;All rights reserved
</span>
```

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,14 +4,19 @@
             {{- if site.Copyright }}
                 <span>{{ site.Copyright | markdownify }}</span>
             {{- else }}
-                <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a> All rights reserved.</span>
+                <span
+                    >Copyright&nbsp;&copy;&nbsp;
+                    {{- if and site.Params.CopyrightStartYear (not (eq site.Params.CopyrightStartYear now.Year)) -}}
+                        {{ site.Params.CopyrightStartYear }}-
+                    {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">{{ site.Title }}</a> All rights reserved
+                </span>
             {{- end }}
-            {{- print " " }}
+            {{- print " · " }}
         {{- end }}
 
         {{- with site.Params.footer.text }}
             {{ . | markdownify }}
-            {{- print " " }}
+            {{- print " · " }}
         {{- end }}
 
 
