--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,20 +3,20 @@
         {{- if not site.Params.footer.hideCopyright }}
             {{- if site.Copyright }}
                 <span>{{ site.Copyright | markdownify }}</span>
-            {{- else }}
+            {{- else -}}
                 <span
                     >Copyright&nbsp;&copy;&nbsp;
                     {{- if and site.Params.CopyrightStartYear (not (eq site.Params.CopyrightStartYear now.Year)) -}}
                         {{ site.Params.CopyrightStartYear }}-
-                    {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;All rights reserved
-                </span>
+                    {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;All rights reserved</span
+                >
             {{- end }}
-            {{- print " · " }}
+            {{ print " · " }}
         {{- end }}
 
-        {{- with site.Params.footer.text }}
+        {{- with site.Params.footer.text -}}
             {{ . | markdownify }}
-            {{- print " · " }}
+            {{ print " · " }}
         {{- end }}
 
 
