--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -154,8 +154,8 @@
     color: var(--table-head-color);
 }
 
-/* 表身第 1, 3, ... 行 (深色) */
-.post-content table tbody tr:nth-child(odd) td {
+/* 表身第 1, 3, ... 行 (深色) (排除代码块) */
+.post-content table:not(.lntable) tbody tr:nth-child(odd) td {
     border-left: 1px solid var(--border);
     border-right: 1px solid var(--border);
     background-color: var(--table-body-background-color-odd);
@@ -239,7 +239,7 @@
     padding: 10px;
     color: rgb(213, 213, 214);
     background: var(--code-block-bg) !important;
-    border-radius: var(--radius);
+    /* border-radius: var(--radius); */
     overflow-x: auto;
     word-break: break-all;
 }
