--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -224,7 +224,8 @@
     /* padding: 4px 6px; */
     padding: 0;
     /* font-size: 0.78em; */
-    font-size: 14.7px;
+    /* font-size: 14.7px; */
+    font-size: 13.8px;
     line-height: 1.6;
     /* 正文的 line-height 已设置为 1.6875 */
     /* background: var(--code-bg); */
