--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -183,7 +183,9 @@
 }
 
 .post-content .highlight:not(table) {
-    margin: 10px auto;
+    /* margin: 10px auto; */
+    margin-top: 10px;
+    margin-bottom: 20px;
     background: var(--code-block-bg) !important;
     border-radius: var(--radius);
     direction: ltr;
