--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -36,12 +36,12 @@
     color: var(--content);
 }
 
-.post-content h3,
+/* .post-content h3,
 .post-content h4,
 .post-content h5,
 .post-content h6 {
     margin: 24px 0 16px;
-}
+} */
 
 .post-content h1 {
     margin: 40px auto 32px;
@@ -49,25 +49,34 @@
 }
 
 .post-content h2 {
-    margin: 32px auto 24px;
+    /* margin: 32px auto 24px; */
+    margin: 64px auto 24px;
     font-size: 32px;
 }
 
 .post-content h3 {
+    /* margin: 32px 0 16px; */
+    margin: 64px 0 16px;
     font-size: 24px;
 }
 
 .post-content h4 {
+    /* margin: 24px 0 16px; */
+    margin: 32px 0 16px;
     /* font-size: 16px; */
     font-size: 19.2px;
 }
 
 .post-content h5 {
+    /* margin: 24px 0 16px; */
+    margin: 32px 0 16px;
     /* font-size: 14px; */
     font-size: 16px;
 }
 
 .post-content h6 {
+    /* margin: 24px 0 16px; */
+    margin: 32px 0 16px;
     /* font-size: 12px; */
     font-size: 16px;
 }
@@ -97,14 +106,18 @@
     margin-bottom: var(--content-gap);
 }
 
+.post-content ul:last-child {
+    margin-bottom: 0;
+}
+
 .post-content ol,
 .post-content ul {
     padding-inline-start: 20px;
 }
 
-.post-content li {
+/* .post-content li {
     margin-top: 5px;
-}
+} */
 
 .post-content li p {
     margin-bottom: 0;
@@ -260,10 +273,44 @@ h6 code {
     font-size: inherit !important;
 }
 
+h2 {
+    border-bottom: 4px solid #000;
+}
+
+h3 {
+    border-bottom: 2px solid #000;
+}
+
+h4 {
+    border-bottom: 2px solid #cacaca;
+}
+
+h2,
+h3 {
+    margin-top: 64px;
+}
+
+h4 {
+    margin-top: 32px;
+}
+
+h5,
+h6 {
+    margin-top: 32px;
+}
+
 .post-content blockquote {
-    margin: 20px 0;
+    /* margin: 20px 0;
     padding: 0 14px;
-    border-inline-start: 3px solid var(--primary);
+    border-inline-start: 3px solid var(--primary); */
+
+    margin: 20px 0;
+    color: var(--blockquote-color);
+    border-radius: 6px;
+    padding: 10px 16px;
+    background-color: var(--blockquote-background-color);
+    position: relative;
+    border-left: 3px solid var(--blockquote-color);
 }
 
 .post-content hr {
