--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -274,6 +274,7 @@
     font-size: inherit !important;
 }
 
+/* 标题下框线样式 */
 .post-content h2 {
     border-bottom: 4px solid var(--primary);
 }
@@ -286,6 +287,7 @@
     border-bottom: 2px solid var(--secondary);
 }
 
+/* 标题 margin */
 .post-content h2,
 .post-content h3 {
     margin-top: 64px;
@@ -300,6 +302,7 @@
     margin-top: 32px;
 }
 
+/* 块引用样式 */
 .post-content blockquote {
     /* margin: 20px 0;
     padding: 0 14px;
@@ -312,6 +315,10 @@
     background-color: var(--blockquote-background-color);
     position: relative;
     border-left: 3px solid var(--blockquote-color);
+}
+
+.entry-header h2 {
+    margin-bottom: 8px;
 }
 
 .post-content hr {
