--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -168,7 +168,8 @@
     min-width: 80px;
     padding: 8px 5px;
     line-height: 1.5;
-    border-bottom: 1px solid var(--border);
+    border-bottom: 2px solid var(--border);
+    border-top: 2px solid var(--border);
     /* border: 1px solid var(--border); */
     /* width: 100%; */
     width: 1%;
@@ -177,23 +178,23 @@
 
 /* 表头行 */
 .post-content table thead th {
-    border-left: 1px solid var(--border);
-    border-right: 1px solid var(--border);
+    border-left: 2px solid var(--border);
+    border-right: 2px solid var(--border);
     background-color: var(--table-head-background-color);
     color: var(--table-head-color);
 }
 
 /* 表身第 1, 3, ... 行 (深色) (排除代码块) */
 .post-content table:not(.lntable) tbody tr:nth-child(odd) td {
-    border-left: 1px solid var(--border);
-    border-right: 1px solid var(--border);
+    border-left: 2px solid var(--border);
+    border-right: 2px solid var(--border);
     background-color: var(--table-body-background-color-odd);
 }
 
 /* 表身第 2, 4, ... 行 (浅色) */
 .post-content table tbody tr:nth-child(even) td {
-    border-left: 1px solid var(--border);
-    border-right: 1px solid var(--border);
+    border-left: 2px solid var(--border);
+    border-right: 2px solid var(--border);
 }
 
 .post-content table th {
