--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -94,7 +94,8 @@
     font-size: 16px;
 }
 
-.post-content a,
+/* .post-content a, */
+.post-content a:hover,
 .toc a:hover {
     box-shadow: 0 1px 0;
     box-decoration-break: clone;
@@ -104,7 +105,7 @@
 .post-content a code {
     margin: auto 0;
     border-radius: 0;
-    box-shadow: 0 -1px 0 var(--primary) inset;
+    /* box-shadow: 0 -1px 0 var(--primary) inset; */
 }
 
 .post-content del {
