--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -94,8 +94,8 @@
     font-size: 16px;
 }
 
-/* .post-content a, */
-.post-content a:hover,
+.post-content a,
+/* .post-content a:hover, */
 .toc a:hover {
     box-shadow: 0 1px 0;
     box-decoration-break: clone;
