Disable math eqref underline

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -94,6 +94,10 @@
     font-size: 16px;
 }
 
+.post-content .MathJax a {
+    box-shadow: none;
+}
+
 .post-content a,
 /* .post-content a:hover, */
 .toc a:hover {
