Fix unordered list last child margin bottom

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -124,9 +124,9 @@
     margin-bottom: var(--content-gap);
 }
 
-.post-content ul:last-child {
+/* .post-content ul:last-child {
     margin-bottom: 0;
-}
+} */
 
 .post-content ol,
 .post-content ul {
