--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -8,7 +8,7 @@
 <script>
     window.MathJax = {
         loader: {
-            load: ["[tex]/empheq", "[tex]/cases"],
+            load: ["[tex]/empheq", "[tex]/cases", '[tex]/boldsymbol'],
         },
         tex: {
             inlineMath: [
@@ -21,7 +21,7 @@
             ],
             tags: "ams",
             packages: {
-                "[+]": ["empheq", "cases"],
+                "[+]": ["empheq", "cases", 'boldsymbol'],
             },
         },
     };
