--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,40 +1,38 @@
 {{- if not (.Param "hideFooter") }}
-    <footer class="footer">
-        {{- if not site.Params.footer.hideCopyright }}
-            {{- if site.Copyright }}
-                <span>{{ site.Copyright | markdownify }}</span>
-            {{- else -}}
-                <span
-                    >Copyright&nbsp;&copy;&nbsp;
-                    {{- if and site.Params.CopyrightStartYear (not (eq site.Params.CopyrightStartYear now.Year)) -}}
-                        {{ site.Params.CopyrightStartYear }}-
-                    {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;All rights reserved</span
-                >
-            {{- end }}
-            {{ print " · " }}
-        {{- end }}
+<footer class="footer">
+    {{- if not site.Params.footer.hideCopyright }}
+    {{- if site.Copyright }}
+    <span>{{ site.Copyright | markdownify }}</span>
+    {{- else -}}
+    <span>Copyright&nbsp;&copy;&nbsp;
+        {{- if and site.Params.CopyrightStartYear (not (eq site.Params.CopyrightStartYear now.Year)) -}}
+        {{ site.Params.CopyrightStartYear }}-
+        {{- end -}}{{- now.Year -}}&nbsp;<a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;All rights reserved</span>
+    {{- end }}
+    {{ print " · " }}
+    {{- end }}
 
-        {{- with site.Params.footer.text -}}
-            {{ . | markdownify }}
-            {{ print " · " }}
-        {{- end }}
+    {{- with site.Params.footer.text -}}
+    {{ . | markdownify }}
+    {{ print " · " }}
+    {{- end }}
 
 
-        <span>
-            Powered by
-            <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a>
-            &
-            <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-        </span>
-    </footer>
+    <span>
+        Powered by
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a>
+        &
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+    </span>
+</footer>
 {{- end }}
 
 {{- if (not site.Params.disableScrollToTop) }}
-    <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
-            <path d="M12 6H0l6-6z" />
-        </svg>
-    </a>
+<a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
+        <path d="M12 6H0l6-6z" />
+    </svg>
+</a>
 {{- end }}
 
 {{- partial "extend_footer.html" . }}
@@ -49,53 +47,64 @@
         };
     }
 
-    document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-            e.preventDefault();
-            var id = this.getAttribute("href").substr(1);
-            if (!window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-                document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView({
-                    behavior: "smooth",
-                });
-            } else {
-                document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView();
-            }
-            if (id === "top") {
-                history.replaceState(null, null, " ");
-            } else {
-                history.pushState(null, null, `#${id}`);
-            }
+    function makeSmoothScroll() {
+        document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+            anchor.addEventListener("click", function (e) {
+                e.preventDefault();
+                var id = this.getAttribute("href").substr(1);
+                // console.log(id);
+                if (
+                    !window.matchMedia("(prefers-reduced-motion: reduce)").matches
+                ) {
+                    document
+                        .querySelector(`[id='${decodeURIComponent(id)}']`)
+                        .scrollIntoView({
+                            behavior: "smooth",
+                        });
+                } else {
+                    document
+                        .querySelector(`[id='${decodeURIComponent(id)}']`)
+                        .scrollIntoView();
+                }
+                if (id === "top") {
+                    history.replaceState(null, null, " ");
+                } else {
+                    history.pushState(null, null, `#${id}`);
+                }
+            });
         });
-    });
+    }
+
+    MathJax.startup.promise.then(makeSmoothScroll);
 </script>
 
 {{- if (not site.Params.disableScrollToTop) }}
-    <script>
-        var mybutton = document.getElementById("top-link");
-        window.onscroll = function () {
-            if (document.body.scrollTop > 800 || document.documentElement.scrollTop > 800) {
-                mybutton.style.visibility = "visible";
-                mybutton.style.opacity = "1";
-            } else {
-                mybutton.style.visibility = "hidden";
-                mybutton.style.opacity = "0";
-            }
-        };
-    </script>
+<script>
+    var mybutton = document.getElementById("top-link");
+    window.onscroll = function () {
+        if (document.body.scrollTop > 800 || document.documentElement.scrollTop > 800) {
+            mybutton.style.visibility = "visible";
+            mybutton.style.opacity = "1";
+        } else {
+            mybutton.style.visibility = "hidden";
+            mybutton.style.opacity = "0";
+        }
+    };
+</script>
 {{- end }}
 
 {{- if (not site.Params.disableThemeToggle) }}
-    <script>
-        document.getElementById("theme-toggle").addEventListener("click", () => {
-            if (document.body.className.includes("dark")) {
-                document.body.classList.remove("dark");
-                localStorage.setItem("pref-theme", "light");
-            } else {
-                document.body.classList.add("dark");
-                localStorage.setItem("pref-theme", "dark");
-            }
-        });
-    </script>
+<script>
+    document.getElementById("theme-toggle").addEventListener("click", () => {
+        if (document.body.className.includes("dark")) {
+            document.body.classList.remove("dark");
+            localStorage.setItem("pref-theme", "light");
+        } else {
+            document.body.classList.add("dark");
+            localStorage.setItem("pref-theme", "dark");
+        }
+    });
+</script>
 {{- end }}
 
 {{- if (and (eq .Kind "page") (ne .Layout "archives") (ne .Layout "search") (.Param "ShowCodeCopyButtons")) }}
