Improve anchor smooth scroll

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -75,6 +75,10 @@
         });
     }
 
+    window.addEventListener('load', (event) => {
+        makeSmoothScroll();
+    });
+
     MathJax.startup.promise.then(makeSmoothScroll);
 </script>
 
